--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 </head>
 
 <body>
-    <div id="login-div">
+    <form id='login-form'>
         <h1 class="h1">Un Gabo ?</h1>
-        <form>
-            <input type="text" class="form-control" placeholder="Pseudo" required>
-            <input type="text" class="form-control" placeholder="Code de connexion" required>
-            <input type="submit" class="btn btn-lg btn-primary btn-block">
-        </form>
-    </div>
+        <input type="text" class="form-control" placeholder="Pseudo" required>
+        <input type="text" class="form-control" placeholder="Code de connexion" required>
+        <input type="submit" class="btn btn-lg btn-primary btn-block">
+    </form>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="js/net.js"></script>
     <script src="js/game.js"></script>
 </body>
