--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I=" crossorigin="anonymous"></script>
     <script src="js/net.js"></script>
     <script src="js/interface.js"></script>
-    <script src="js/game.js"></script>
+    <script src="js/gameclient.js"></script>
 </body>
 
 </html>
