--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
         <input type="text" name="logincode" class="form-control" placeholder="Code de connexion" required>
         <input type="submit" class="btn btn-lg btn-primary btn-block">
     </form>
-    
+
+    <div id="game">
+        <div id="my-field">
+            <div id="instruction"></div>
+            <div id="confirm-instruction"></div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"
